--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<ol>
+		<li>data-ns-test</li>
+		<li>Protien</li>
+		<li>Gold</li>
+	</ol>
+	<ul>
+		<li>data-ns-test</li>
+		<li>Jammu</li>
+		<li>Goa</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
